test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-data-sync-to-nosync-delete-rule/02-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-sync-to-nosync-delete-rule-ns
