test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-data-sync-to-nosync-delete-rule/07-checks.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
assert:
- secret.yaml
- configmap.yaml
