test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-data-sync-to-nosync-delete-rule/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-to-nosync-delete-rule
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
